--- a/client/src/index.html
+++ b/client/src/index.html
@@ -6,6 +6,48 @@
     <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,500" rel="stylesheet">
     <link href="main.scss" rel="stylesheet">
     <link rel="stylesheet" href="animate.min.css">
+    <style>
+        body {
+            background: #333;
+            color: #fff;
+        }
+        .user1 {
+            position: relative;
+            border: 2px solid #FFFFFF;
+            box-sizing: border-box;
+            border-radius: 30px;
+            width: 200px;
+            height: 50px;
+            text-align: center;
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+        }
+        .user2 {
+            position: relative;
+            border: 5px solid #FFD600;
+            box-sizing: border-box;
+            border-radius: 30px;
+            width: 250px;
+            height: 70px;
+            text-align: center;
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+        }
+        .user3 {
+            border: 2px solid #FFFFFF;
+            box-sizing: border-box;
+            border-radius: 30px;
+            width: 150px;
+            height: 50px;
+            text-align: center;
+            display: inline-block;
+            align: center !important;
+            margin: auto !important;
+        }
+      
+    </style>
 </head>
 <header>
     <h1>WOW! Not Bad</h1>
